--- a/src/Component/Style.css
+++ b/src/Component/Style.css
@@ -161,3 +161,63 @@ button {
   position: relative;
   right: 500px;
 }
+.forms_info {
+  display: grid;
+  background-color: #fff;
+  grid-template-columns: 15rem 15rem;
+  grid-template-rows: repeat(3, 2.5rem);
+}
+
+#Contact {
+  -moz-appearance: textfield;
+}
+.border {
+  border: 1px solid grey;
+  border-radius: 1rem;
+  background: #fff;
+  position: relative;
+  padding: 1rem;
+  bottom: 100rem;
+  width: 500px;
+  text-align: left;
+}
+
+
+.contact{
+  position: absolute;
+  top: 80px;
+  right: 80px;
+  width: 500px;
+  height: 750px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 14px 27px #00000017;
+  border-radius: 13px;
+  padding: 30px 30px 10px 30px;
+  animation: contactTop 2s ease 0s 1 normal forwards;
+}
+input,select,option{
+  all: unset;
+  height: 25px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border: 0.25px solid #b8b8b8 !important;
+  border-radius: 8px;
+  width: 190px;
+  color: #5D5D5D;
+  padding: 3px 10px;
+  font-weight: 100;
+  font-size: 12px;
+}
+.select{
+  width: 95%;
+  display: grid;
+  place-items: center;
+}
+label{
+  font-size: 12px;
+  font-family: Aktifoa;
+  color: #292929;
+}
+
